tests/errors/compiler/dif_types_in_enum/dif_types_in_enum_1.c
enum Color : char
{
	red = 'r',
	green = 1,
	blue = 'b'
} tmp;

int main()
{
	return 0;
}
